Fixed H1 closing tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  
 <body>
-  <h1>Mike Aguilar/h1>
+  <h1>Mike Aguilar</h1>
   <p>Welcome to my first github pages!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
