--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
   <h1>Mike Aguilar</h1>
   <p>Welcome to my first github pages!</p>
+  <p>I love my beautiful soon to be fiance</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
